--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,16 @@
-<!--<footer id="footer">
-    <nav>
-
-    </nav>
-    <p>&copy; Double Open Project</p>
-  </footer>-->
+<footer id="footer">
+  <nav>
+    <ul>
+      <li>
+          <a href="https://github.com/doubleopen-project/" title="GitHub" class="social-icon"><img src="/images/github.svg" width="20" /></a>
+      </li>
+      <!--<li>
+          <a href="https://twitter.com" title="Twitter" class="social-icon"><img src="/images/twitter.svg" width="20" /></a>
+      </li>-->
+      <li>
+          <a href="/index.xml" title="RSS" class="social-icon"><img src="/images/rss.svg" width="17" style="margin-top: 1px" /></a>
+      </li>
+    </ul>
+  </nav>
+  <p>&copy; Double Open Project | Powered by <a href="https://gohugo.io">Hugo</a> and <a href="https://github.com/jeblister/kube">Kube</a></p>
+</footer>
