--- a/themes/kube/static/css/custom.css
+++ b/themes/kube/static/css/custom.css
@@ -1,6 +1,3 @@
-#top {
-  height: 92px;
-}
 #top #top-brand span,
 #top #top-brand a {
   line-height: 2.5em;
@@ -88,4 +85,10 @@ a.social-icon:hover {
 #footer {
   margin-top: 120px;
   margin-bottom: 0;
+}
+@media (max-width: 768px) {
+  #footer nav ul li {
+    margin: 8px;
+    display: inline;
+  }
 }
