--- a/layouts/index.html
+++ b/layouts/index.html
@@ -62,10 +62,13 @@
         <div class="modal-body">
           <h2>Join the mailing list</h2>
           <p>Subscribe to our mailing list and we'll keep you updated about the Double Open project. You may unsubscribe at any time.</p>
-          <form name="contact" method="POST" data-netlify="true">
+          <form name="contact" method="POST" data-netlify="true" action="/success">
               <p>
                 <label>Email: <input type="text" name="name" /></label>
               </p>
+              <p>
+                  <label>Message (optional): <textarea name="message"></textarea></label>
+                </p>
               <div data-netlify-recaptcha="true"></div>
               <p>
                 <button type=”submit”>Subscribe</button>
