--- a/layouts/index.html
+++ b/layouts/index.html
@@ -36,7 +36,7 @@
         <figure>
           <img alt="Publication" height="48" src="{{ "/images/file-text.svg" | relURL }}" width="48">
         </figure>
-        <h3>Publications</h3>
+        <h3>Publication</h3>
         <p>As we go along, the results of our research will be published in an open repository under an open 
           license. Head over to our <a href="https://github.com/doubleopen-project/doubleopen-publications/blob/master/publication.md#double-open-landscape-survey">GitHub repo</a> to take a peek. 
         </p>
