Add link to git book

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
   </div>
   <div id="action-buttons">
     <a class="button primary big" href="https://github.com/doubleopen-project">Go to GitHub &raquo;</a>
-    
+    <a class="button outline big" href="https://doubleopen-project.github.io/">Quickstart &raquo;</a>
   </div>
 
   <div id="kube-features">
