--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -8,7 +8,7 @@
     <p>Latest developments in the project</p>
 </div>
 <ul id="posts">
- {{ range .Paginator.Pages.ByWeight }} {{ partial "page-summary" . }} {{ end }}
+ {{ range (.Paginate (.Pages.ByDate.Reverse)).Pages -}} {{ partial "page-summary" . }} {{ end }}
   <!--<section>{{ partial "pagination" .}}</section>-->
 </ul>
 
