--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,6 +11,7 @@
   <div id="action-buttons">
     <a class="button primary big" href="https://github.com/doubleopen-project">Go to GitHub &raquo;</a>
     <a class="button outline big" href="https://doubleopen-project.github.io/">Quickstart &raquo;</a>
+    <a class="button outline big" href="https://docs.google.com/forms/d/e/1FAIpQLSfBjfDrakRQuSaYQE3-sfhgn16h06pZkbtaDhOwmETWbY6yKA/viewform?usp=sf_link">Enter Email &raquo;</a>
   </div>
 
   <div id="kube-features">
