--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -12,5 +12,5 @@
       </li>
     </ul>
   </nav>
-  <p>&copy; Double Open Oy | Powered by <a href="https://gohugo.io">Hugo</a> and <a href="https://github.com/jeblister/kube">Kube</a></p>
+  <p>&copy; Double Open Oy | <a href="/privacy">Privacy notice</a> | Powered by <a href="https://gohugo.io">Hugo</a> and <a href="https://github.com/jeblister/kube">Kube</a></p>
 </footer>
